Login page: fix remaining theme and spacing issues

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -139,6 +139,11 @@ body {
   font-style: normal;;
 }
 
+.login-form-right{
+  padding-right: 10px;
+  padding-top: 50px;
+}
+
 .signup-page {
   background-color: #272626;
   font-family: "Hind", sans-serif;
@@ -148,7 +153,7 @@ body {
 
 .signup-form-left{
   padding-right: 10px;
-  padding-top: 10px;
+  padding-top: 50px;
 }
 
 .bookheading {
